# pcompute

./: Cargo.toml  db.sqlite3
migrations/: 20231206183549_users.sql
src/: main.rs
src/api/: auth.rs  mod.rs
src/controller/: mod.rs  session.rs
src/controller/user/: mod.rs
src/middleware/: auth.rs
src/ui/: auth.rs  mod.rs
src/util/: mod.rs
templates/: page.html
templates/auth/: login.html
