[package]
name = "pcompute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argon2 = "0.5.2"
axum = "0.7.2"
chrono = { version = "0.4.31", features = ["serde"] }
password-hash = { version = "0.5.0", features = ["getrandom"] }
sqlx = { version = "0.7.3", features = ["sqlite", "tls-rustls", "uuid", "chrono"] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
