[package]
name = "pcompute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argon2 = "0.5.2"
async-trait = "0.1.74"
axum = { version = "0.7.2", features = ["macros"] }
axum-core = "*"
base64 = "0.21.5"
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3.29"
password-hash = { version = "0.5.0", features = ["getrandom"] }
rand = "0.8.5"
redis = { version = "0.24.0", features = ["tokio-comp"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_bytes = "0.11.12"
serde_derive = "1.0.193"
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["sqlite", "tls-rustls", "uuid", "chrono"] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
